--- a/reg.html
+++ b/reg.html
@@ -236,7 +236,7 @@
 
             }
             else{
-                alert(`${newDoc1()}`)
+                function newDoc1()
     
             
             }
