--- a/reg.html
+++ b/reg.html
@@ -236,7 +236,7 @@
 
             }
             else{
-                function newDoc1()
+                alert(`${newDoc1()}`);
     
             
             }
